--- a/MartialPerformance/MartialPerformance.csproj
+++ b/MartialPerformance/MartialPerformance.csproj
@@ -110,6 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
+    <Compile Include="Info.json" />
     <Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
